# orbit-simulator

./: CMakeLists.txt  Main.cpp  README.md  Tests.cpp  logs.txt
include/: GUI.hpp  Orbit.hpp  Planet.hpp  PlanetManager.hpp  Vector.hpp
include/main/: CameraManager.hpp  EventReciever.hpp  GUI.hpp  Macros.hpp  Orbit.hpp  Planet.hpp  PlanetManager.hpp  Vector.hpp
include/main/planets/: Asteroid.hpp  Comet.hpp  Gas.hpp  Ringed.hpp  Satellite.hpp  Star.hpp  Telluric.hpp
include/planets/: Asteroid.hpp  Comet.hpp  Gas.hpp  Ringed.hpp  Satellite.hpp  Star.hpp  Telluric.hpp
src/main/: CameraManager.cpp  EventReciever.cpp  GUI.cpp  Orbit.cpp  Planet.cpp  PlanetManager.cpp  Vector.cpp
src/main/Planets/: Asteroid.cpp  Comet.cpp  Gas.cpp  Ringed.cpp  Satellite.cpp  Star.cpp  Telluric.cpp
src/test/: OrbitTest.cpp  PlanetManagerTest.cpp  PlanetTest.cpp  VectorTest.cpp
